# Projects

Agricultural_Management_System/: meuarquivo.txt
Agricultural_Management_System/ARQCP/: Makefile
Agricultural_Management_System/ARQCP/ProcessadorDeDados/: CMakeLists.txt
Agricultural_Management_System/ARQCP/ProcessadorDeDados/config/: config.txt
Agricultural_Management_System/ARQCP/ProcessadorDeDados/etc/: ttyS0
Agricultural_Management_System/ARQCP/ProcessadorDeDados/sprint2/usac01/: asm.h  asm.s  main.c
Agricultural_Management_System/ARQCP/ProcessadorDeDados/sprint2/usac02/: Makefile  asm.h  asm.s  main.c
Agricultural_Management_System/ARQCP/ProcessadorDeDados/sprint2/usac03/: asm.h  asm.s  main  main.c
Agricultural_Management_System/ARQCP/ProcessadorDeDados/sprint2/usac04/: Makefile  asm.h  asm.s  main.c
Agricultural_Management_System/ARQCP/ProcessadorDeDados/sprint2/usac05/: asm.h  asm.s  main.c
Agricultural_Management_System/ARQCP/ProcessadorDeDados/sprint3/: USAC02.c  USAC06.c  USAC06.s  USAC07.c  USAC0809.c  USAC10.c  functions.h  main.c  movingmedian.c  structs.h
Agricultural_Management_System/BaseDados/: Legacy_Data_v3.xlsx  Legacy_Data_v4.xlsx  Relation_Model.vpp  relation_model3.vpp
Job_Company_Management/: pom.xml  readme.md  run-backoffice.bat  run-backoffice.sh  run-bootstrap.bat  run-bootstrap.sh  run-other.sh  run-user.bat  run-user.sh
Surgical_Management_System/: .env  .gitignore  DDDNetCore.csproj  Program.cs  Program3.cs  Startup.cs  Startup2.cs  appsettings.json  cypress.config.js  dddnetcore.sln  package-lock.json  package.json
(+910 files in other folders)
